# bevy_tank_war

./: Cargo.toml
assets/shaders/: glow_material.wgsl  hue_material.wgsl
src/: ballistics.rs  collider.rs  components.rs  explosion.rs  game_field.rs  game_plugin.rs  image_hue_loader.rs  input.rs  landscape.rs  lib.rs  main.rs  materials.rs  missile.rs  shaders.rs  status_panel.rs  tank.rs
src/geometry/: circle.rs  ellipse.rs  mod.rs  rect.rs
src/shaders/: glow.glslf  hue.glslf
