[package]
name = "bevy_tank_war"
version = "0.1.0"
authors = ["Kirill Kuzminykh <cykooz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version="0.5.0", features = ["vorbis"]}
rand = { version = "0.8.4", features = ["small_rng"] }
noise = "0.7.0"
itertools = "0.10.1"
bevy_prototype_lyon = "0.3.0"
bytecount = "0.6.2"
env_logger = "0.9.0"
line_drawing = "1.0.0"
trees = "0.4.2"


[profile.dev.package.'*']
opt-level = 3


[profile.release]
#lto = true
opt-level = 3
#codegen-units = 1
